Added tests and changed return type of bellman