@@ -6,7 +6,8 @@ import com.hambbe.graph.Graphs;
 import com.hambbe.graph.Graphs.Link;
 import com.hambbe.graph.UndirectedGraph;
 
-import java.util.List;
+import java.util.HashMap;
+import java.util.LinkedList;
 
 /**
  * Created by Benjamin on 12.01.2016.
@@ -74,13 +75,12 @@ public class Sample {
         System.out.println("---");
 
         System.out.println("Find shortest routes to all other cities from " + graph.getValue(from) + " (bellmanFord)");
-        // Find & print all costs from from to all other vertexes.
-        List<List<Link>> res = Graphs.bellmanFord(graph, from);
-        if (res == null) System.out.println("bellman returned null");
-        else res.forEach(
+        HashMap<Vertex, LinkedList<Link>> routes = Graphs.bellmanFord(graph, from);
+        if (routes == null) System.out.println("bellman returned null");
+        else routes.values().forEach(
                 route -> {
                     if (!route.isEmpty()) {
-                        Link last = route.get(route.size() - 1); // small enough sample so O(n^2) does not matter :)
+                        Link last = route.getLast();
                         System.out.println(graph.getValue(last.getTo()) + ": " + last.getTotalCost());
                     }
                 }
